test/files/neg/t6276.check
t6276.scala:6: warning: method a in class C does nothing other than call itself recursively
      def a: Any = a // warn
                   ^
t6276.scala:7: warning: value b in class C does nothing other than call itself recursively
      val b: Any = b // warn
                   ^
t6276.scala:9: warning: method c in class C does nothing other than call itself recursively
      def c: Any = this.c // warn
                        ^
t6276.scala:10: warning: method d in class C does nothing other than call itself recursively
      def d: Any = C.this.d // warn
                          ^
t6276.scala:11: warning: method e in class C does nothing other than call itself recursively
      def e(): Any = e //warn
                     ^
t6276.scala:16: warning: method a does nothing other than call itself recursively
      def a: Any = a // warn
                   ^
t6276.scala:25: warning: method a does nothing other than call itself recursively
      def a = a // warn
              ^
warning: 1 deprecation (since 2.13.3); re-run with -deprecation for details
error: No warnings can be incurred under -Werror.
8 warnings
1 error
